Overview of changes from 0.0.2 to 0.0.3
==
  * Support libchewing >= 0.3.091


Overview of changes from 0.0.1 to 0.0.2
==
* New features
  * Full/Half shape switch support by toolbar
  * Keyboard type support

* Fix
  * Fix crash in some cases


Overview of changes from 0.0.0 to 0.0.1
==
* Fix
  - Fix compilation on uim-1.2.x